# AUTOTRADE

./: .env.example  .gitignore  CLAUDE.md  README.md  autotrade.spec  build_exe.bat  launcher.py  package_dist.bat  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  run_backtest.py  run_backtest_5days.py  run_remote_monitor.bat  setup.bat  setup.sh  setup_obsidian_autotrade.py  simulate_today.py  verify_phase1.py  watchdog.py
Obsidian/: 00_대시보드.md  02_Phase_진행상황.md  03_KIS_API_레퍼런스.md  04_환경설정.md  07_개발지침.md  VI-DEFENSE-01_작업명령서.md  W-31_WebSocket_런타임로깅_검증.md  개발환경.md  라이브 첫 업데이트 스펙.txt  마스터업데이트플랜.md  백테스트_결과.md  새대화_컨텍스트_2026-04-17.md  실제 거래 (paperlive) 준비.txt  이슈_트래커.md  한국투자증권_오픈API_전체문서_20260416_030007.xlsx  한국투자증권_오픈API_전체문서_20260416_030007_backup_20260422_084941.xlsx  한국투자증권_오픈API_전체문서_20260416_030007_backup_20260423_141047.xlsx
config/: __init__.py  krx_nxt_listing.json  settings.py  stock_master.json  strategy_params.yaml
docs/: AUTOTRADE_대시보드_수정_가이드라인_v1.md  AUTOTRADE_매뉴얼.html  CLAUDE_v1_archived.md  HANDOFF_2026-04-20_LIVE_Day1_analysis.md  HANDOFF_2026-04-20_session2_api_bug_investigation.md  HANDOFF_2026-04-21_LIVE_Day3_objectives.md  M-23_프로그램비중_실시간업데이트_진단.md  M-LOG-1_mission_brief.md  R-17_channel_resolver.md  W-05b_coordinator.md  W-05c_trader_signature.md  W-06a_main_facts.md  W-06b1_callback_di.md  W-06b2_main_delegation.md  W-07b_dashboard.md  W-08_integration_check.md  W-09_dashboard_issue035.md  W-16_vault_재구성_명령서.md  W-29_프로그램비중_실시간업데이트_구현.md  autotrade.service.current  autotrade.service.w10-proposed  gate_g0_reference.md  (+13 more)
src/: main.py
(+163 files in other folders)
